# intel-gaudi-lab

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  compose.yml  example.env  pyproject.toml  requirements.txt  setup.py
apps/: __init__.py  app.py  main.py
apps/image_generation/: README.md  image_generation_webapp.py  run_app.sh
apps/image_generation/public/: script.js
apps/image_generation/src/: type.py
experimentals/: inference_stable_diffusion.py  inference_stable_diffusion_enouvo.py  macro.py  optimum_stable_diffusion_text2image.py  run.sh  stable_diffusion_2_1_app.py  stable_diffusion_app.py
experimentals/distributed_runner/: gaudi_spawn.py
experimentals/image_captioning/: image_captioning_app.py  run_app.sh
experimentals/image_captioning/public/: index.html  script.js
experimentals/image_captioning/public/assets/: styles.css
experimentals/image_captioning/src/: pipeline_loader.py  registry.py  type.py
experimentals/image_generation/: README.md  inference_stable_diffusion.py  run_app.sh  stable_diffusion_app.py
experimentals/image_generation/public/: index.html  script.js
experimentals/image_generation/public/assets/: styles.css
experimentals/image_generation/src/: macro.py  pipeline_loader.py  type.py
experimentals/image_generation/src/public/: index.html
experimentals/image_to_video/: README.md  hl-smi_log.txt  image_to_video_generation.py  image_to_video_generation_app.py  image_to_video_generation_with_svd.py  run_app.sh  run_img2vid.sh  run_img2vid_svd.sh
experimentals/image_to_video/public/: index.html  script.js
experimentals/image_to_video/src/: macro.py  pipeline_loader.py  process_video.py  registry.py  type.py
experimentals/multi_workers/: benchmark.js  nginx.conf  start.sh  worker.py
experimentals/sd_xl_base_1/: get_sd_args.py  prompts.txt  sd_xl_base_1_inference.py
experimentals/stable_diffusion/: __init__.py  pipeline_loader.py
experimentals/text_generation/: benchmark.js  distributed_inference.py  distributed_inference_deepseek.py  gaudi_spawn.py  inference.py  run_distributed_inference.sh  run_distributed_inference_deepseek.sh  run_generation.py  run_inference_multi_card.sh  run_inference_single_card.sh  run_server_distributed.sh  run_text_generation.sh  server.py  text_generation_flow.py  utils.py
experimentals/text_generation/templates/: index.html
experimentals/text_to_video/: run_text2vid.sh  text_to_video_generation.py
libs/: __init__.py
libs/cli/: __init__.py  cli_parser.py  get_sd_args.py
libs/configs/: __init__.py  configs.py
libs/generative_ai/image_generation/stable_diffusion/: __init__.py  gaudi_inference_pipeline.py  pipeline_loader.py  registry.py
libs/utils/: __init__.py  common.py  image_utils.py  logger_utils.py  time_utils.py
libs/utils/averager/: __init__.py  averager.py
multi-workers/: README
public/: index.html  script.js
scripts/: run_deepspeed_inference.sh  run_distributed_inference.sh  run_mpi_inference.sh  run_sd_xl_base_1_inference.sh  source_env.sh
