[project]
name = "intel-gaudi-lab"
version = "0.1.0"
description = "Experiments and optimizations with Intel Gaudi for AI training and inference."
license = { text = "MIT" }
dependencies = [
    "black==24.10.0",
    "numpy==2.2.4",
    "pandas==2.2.3",
    "pre-commit==4.0.1",
    "pytest==8.3.3",
    "pytest-benchmark==5.1.0",
    "pyyaml==6.0.1",
    "ruff==0.7.3",
    "setuptools==49.1.3",
    "tqdm==4.64.1",
    "wheel==0.37.0",
]

[tool.ruff]
# select target rules for current project
select = [
	"F",					  # Pyflakes
	"E", "W",				# pycodestyle
	"C90",					# mccabe
	"I",					  # isort
	"N",					  # pep8-naming
	"D",					  # pydocstyle
	"UP",					  # pyupgrade
	"PL",					  # Pylint
]

# list rules which can be ignored
ignore = []

# max line length
line-length = 88

# Python version
target-version = "py310"

[tool.ruff.pylint]
max-args = 10
