[project]
name = "intel-gaudi-lab"
version = "0.1.0"
description = "Experiments and optimizations with Intel Gaudi for AI training and inference."
license = { text = "MIT" }
dependencies = [
    "black==24.10.0",
    "compel>=2.0.3",
    "eager>=0.0.1",
    "numpy<2",
    "opencv-python>=4.11.0.86",
    "optimum[habana]>=1.24.0",
    "pandas==2.2.3",
    "pre-commit==4.0.1",
    "precommit-hook>=0.2.1",
    "pytest==8.3.3",
    "pytest-benchmark==5.1.0",
    "pyyaml==6.0.1",
    "ruff==0.7.3",
    "sentencepiece>=0.2.0",
    "setuptools==49.1.3",
    "tqdm==4.64.1",
    "wheel==0.37.0",
]

[tool.ruff]
# select target rules for current project
lint.select = [
	"F",					  # Pyflakes
	"E", "W",				# pycodestyle
	"C90",					# mccabe
	"I",					  # isort
	"N",					  # pep8-naming
	"D",					  # pydocstyle
	"UP",					  # pyupgrade
	"PL",					  # Pylint
]

# list rules which can be ignored
lint.ignore = []

# max line length
line-length = 80

# Python version
target-version = "py310"

[tool.ruff.pylint]
max-args = 10

[tool.black]
line-length = 80
