[project]
name = "intel-gaudi-lab"
version = "0.1.0"
requires-python = "==3.10.12"
description = "Experiments and optimizations with Intel Gaudi for AI training and inference."
license = { text = "MIT" }
dependencies = [
    "black==24.10.0",
    "deepspeed",
    "huggingface-hub[hf-xet]>=0.30.1",
    "optimum-habana",
    "pre-commit==4.0.1",
    "pytest==8.3.3",
    "pytest-benchmark==5.1.0",
    "ruff==0.7.3",
    "opencv-python==4.11.0.86",
    "compel==2.0.3",
    "sentencepiece==0.2.0",
    "fastapi==0.115.12",
    "uvicorn==0.34.0",
    "python-multipart==0.0.20",
]

[tool.ruff]
# select target rules for current project
lint.select = [
    "F",   # Pyflakes
    "E",   # pycodestyle
    "W",   # pycodestyle
    "C90", # mccabe
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "PL",  # Pylint
]

# list rules which can be ignored
lint.ignore = []

# max line length
line-length = 80

# Python version
target-version = "py310"

[tool.ruff.pylint]
max-args = 10

[tool.black]
line-length = 80

[tool.uv.sources]
optimum-habana = { git = "https://github.com/huggingface/optimum-habana.git", rev = "v1.16.0" }
deepspeed = { git = "https://github.com/HabanaAI/DeepSpeed.git", rev = "1.20.0" }
